# nlp-beginner

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml
task0/: download_model.py  record.md  transformers_benchmark.py  vllm_benchmark.py
task0/docs/: record.md
task1/: analysis.py  data_process.py  run_all_experiments.py  train.py
task1/docs/: project.md  results_summary.txt
task2/: README.md  analysis.py  data_process.py  train.py
task2/docs/: FINAL_RESULTS.md  IMPLEMENTATION_NOTES.md  experiment_summary.md  project.md  record.md
task3/: README.md  show_model_architecture.py  test_data_pipeline.py  test_models.py  test_training_infrastructure.py
task3/docs/: FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PROGRESS_REPORT.md  PROJECT_COMPLETION_CHECKLIST.md  project.md
task3/experiments/addition/: evaluate_and_compare.py  train_gpt.py  train_gpt_large.py  train_gpt_reversal.py  train_transformer.py  train_transformer_large.py  train_transformer_reversal.py  train_transformer_scratchpad.py
task3/utils/: __init__.py  ablation_analyzer.py  advanced_visualization.py  attention_extractor.py  mask.py  metrics.py  trainer.py  visualization.py
