[project]
name = "nlp-beginner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "matplotlib>=3.10.8",
    "panda>=0.3.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "vllm>=0.17.0",
]
